--- a/OpenGLLearningApp/OpenGLLearningApp.vcxproj.filters
+++ b/OpenGLLearningApp/OpenGLLearningApp.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClInclude Include="PointLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CommonValues.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
