Spot/Flash Light has been added and tested

--- a/OpenGLLearningApp/OpenGLLearningApp.vcxproj
+++ b/OpenGLLearningApp/OpenGLLearningApp.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="OpenGLLearningApp.cpp" />
     <ClCompile Include="PointLight.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="SpotLight.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
@@ -160,6 +161,7 @@
     <ClInclude Include="OpenGLLearningApp.h" />
     <ClInclude Include="PointLight.h" />
     <ClInclude Include="Shader.h" />
+    <ClInclude Include="SpotLight.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
